[package]
name = "oxkart"
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/blacha/oxkart"
description = "Kart utils"
keywords = ["kart"]

[[bin]]
name = "oxkart"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
git2 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
rmpv = { version = "1.0", features = ["with-serde"] }
walkdir = "2.3"
hex = "0.4"
base64 = "0.21"
arrow = "53.0"
parquet = { version = "53.0", features = ["zstd"] }
geozero = "0.14"
rayon = "1.8"
itertools = "0.12"
num-format = "0.4"
mimalloc = "0.1"
humansize = "2.1.3"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10.9"


[dev-dependencies]
tempfile = "3.23.0"
